--- a/release_files/Dockerfile.ubuntu
+++ b/release_files/Dockerfile.ubuntu
@@ -151,7 +151,7 @@ RUN	apt-get update -y ; \
         groupadd --gid 5000 ovms ; \
         useradd --home-dir /home/ovms --create-home --uid 5000 --gid 5000 --groups 39,44 --shell /bin/bash --skel /dev/null ovms
 
-RUN apt-get update && apt-get install -y --no-install-recommends libxml2 && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
+RUN apt-get update && apt-get install -y --no-install-recommends libxml2 libvips && rm -rf /var/lib/apt/lists/* && rm -rf /tmp/*
 
 # for NVIDIA
 RUN if [ "$NVIDIA" == "1" ]; then true ; else exit 0 ; fi ; echo "installing cuda apt package"; \
